--- a/index.html
+++ b/index.html
@@ -1,5 +1,27 @@
----
-layout: default
-title: Home
----
-<h1>Rahul Ramakrishnan</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Rahul Ramakrishnan</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+    <header>
+        <div class="header-left">Rahul Ramakrishnan</div>
+        <div class="header-right">
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+        </div>
+    </header>
+    <main>
+        <section class="introduction">
+            <h1>Welcome to My Website!</h1>
+            <p>This is a brief introduction about myself. Here you can find my projects, experiences, and more about what I do.</p>
+        </section>
+    </main>
+    <footer>
+        <p>Contact me at: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
+    </footer>
+</body>
+</html>
