--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Home</title>
+    <title>Rahul Ramakrishnan</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <h1>Rahul Ramakrishnan</h1>
   </body>
+  Hello, Welcome!
 </html>
