--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Rahul Ramakrishnan</title>
+    <title>{{site.title}}</title>
   </head>
   <body>
-    <h1>Rahul Ramakrishnan</h1>
+    <h1>{{site.Home_title}}</h1>
   </body>
-  Hello, Welcome!
+  {{site.Home_body}}
 </html>
