--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
----
+_---
 ---
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
-    <title>{{site.title}}</title>
+    <title>{{site.Home_title}}</title>
   </head>
   <body>
     <h1>{{site.Home_title}}</h1>
