--- a/index.html
+++ b/index.html
@@ -2,4 +2,5 @@
 layout: default
 title: Home_title
 ---
-<h1>{{site.Home_body}}{% include navigation.html %}</h1>
+<h1>{{site.Home_body}}</h1>
+{% include navigation.html %}
