--- a/index.html
+++ b/index.html
@@ -2,5 +2,4 @@
 layout: default
 title: Home_title
 ---
-{% include navigation.html %}
-<h1>{{site.Home_body}}</h1>
+<h1>{{site.Home_body}}</h1>{% include navigation.html %}
