--- a/index.html
+++ b/index.html
@@ -2,3 +2,18 @@
 layout: home
 background: '/img/bg-index.jpg'
 ---
+Introduction
+Hello,
+
+Welcome to my website blah blah blah 
+blah
+
+blah
+blah
+blah
+
+blah
+blah
+
+blah
+blah
