--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ background: '/img/bg-index.jpg'
 ---
 Introduction
 Hello,
-/nWelcome to my website blah blah blah 
+\nWelcome to my website blah blah blah 
 blah
 
 blah
