--- a/index.html
+++ b/index.html
@@ -2,17 +2,6 @@
 layout: home
 background: '/img/bg-index.jpg'
 ---
-Introduction
-Hello,
-\nWelcome to my website blah blah blah 
-blah
-
-blah
-blah
-blah
-
-blah
-blah
-
-blah
-blah
+<div>Hello,</div>
+<div>Welcome to my website blah blah blah</div>
+<div>blah</div>
