--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 layout: home
 background: '/img/bg-index.jpg'
 ---
+<header>
+  Introduction
+</header>
 <div>Hello,</div>
 <div>Welcome to my website blah blah blah</div>
 <div>blah</div>
