--- a/index.html
+++ b/index.html
@@ -8,3 +8,9 @@ background: '/img/bg-index.jpg'
 <div>Hello,</div>
 <div>Welcome to my website blah blah blah</div>
 <div>blah</div>
+<div>blah</div>
+<div>blah</div>
+<div>blah</div>
+<div>blah</div>
+<div>blah</div>
+<div>blah</div>
