--- a/index.html
+++ b/index.html
@@ -2,15 +2,7 @@
 layout: home
 background: '/img/bg-index.png'
 ---
-<header>
-  Introduction
-</header>
-<div>Hello,</div>
-<div>Welcome to my website blah blah blah</div>
-<div>blah</div>
-<div>blah</div>
-<div>blah</div>
-<div>blah</div>
-<div>blah</div>
-<div>blah</div>
-<div>blah</div>
+<p>I'm a unique blend of artist and technician, embarking on a journey where stunning visual effects and intricate programming intertwine. With a nascent yet spirited career as a Junior Compositing TD, I've dipped my toes into the vast seas of VFX, armed with a palette that includes Nuke, Maya, and Houdini, among others.</p>
+<p>But that's just the surface. Beyond the visuals, my world is woven with lines of code in C, Java, SQL, Python, and R, supported by a foundation in data science and analysis. My toolkit is ever-expanding, driven by a relentless curiosity and a passion for both the pixels and the processes behind them.</p>
+<p>Dive into my portfolio, and you'll find a fusion of creativity and technical prowess, from captivating visual effects to sophisticated data-driven projects. Each page of this site is a doorway to different facets of my expertise and interests—a glimpse into the journey of a professional who refuses to be boxed into a single label.</p>
+<p>Join me in exploring the possibilities that lie at the crossroads of art and technology. Whether you're a recruiter, a fellow creator, or just passing by, there's a story here for everyone</p>
