--- a/VFX.html
+++ b/VFX.html
@@ -3,10 +3,16 @@ layout: page
 title: VFX
 background: '/img/bg-index.png'
 ---
-<p>doifvbneiovbeadivbnaikvk
-dmvodesfmnvmdoivndoikvn
-dsolkivnekvneadvednva
-aejknveajkvnaedkvnaedkjj</p> <div style="padding:56.25% 0 0 0;position:relative;">
+<p>Welcome to my demo reel. As a Junior Compositing Technical Director with six months of immersive experience in the dynamic world of visual effects, I've embarked on a journey filled with learning, creativity, and a deepening passion for bringing imagination to life.
+  In this short span, I've had the opportunity to delve into the intricacies of compositing, working with tools like Nuke, Maya, and Houdini to create seamless visual narratives.
+
+This reel represents not just the culmination of my work so far but a testament to my dedication and eagerness to grow within this field.
+  Each clip is a learning milestone, showcasing my evolving understanding of color, light, and texture, and how these elements coalesce to form the visual storytelling that captivates us.
+
+Though my professional journey is just beginning, my commitment to this art form runs deep. I invite you to view my reel, a reflection of my foundational skills and my potential for growth.
+  I look forward to the opportunities and challenges ahead, eager to contribute my creativity and technical skills to the world of visual effects.</p> 
+
+<div style="padding:56.25% 0 0 0;position:relative;">
   <iframe src="https://player.vimeo.com/video/898149911?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0"
     allow="autoplay; fullscreen; picture-in-picture; clipboard-write" 
     style="position:absolute;top:0;left:0;width:100%;height:100%;" title="RahulRamakrishnan_DemoReel_v07"></iframe>
