--- a/VFX.html
+++ b/VFX.html
@@ -6,7 +6,7 @@ background: '/img/bg-index.png'
 <p>Welcome to my demo reel. As a Junior Compositing Technical Director with six months of immersive experience in the dynamic world of visual effects, I've embarked on a journey filled with learning, creativity, and a deepening passion for bringing imagination to life.
   In this short span, I've had the opportunity to delve into the intricacies of compositing, working with tools like Nuke, Maya, and Houdini to create seamless visual narratives.</p>
 
-<p></p>This reel represents not just the culmination of my work so far but a testament to my dedication and eagerness to grow within this field.
+<p>This reel represents not just the culmination of my work so far but a testament to my dedication and eagerness to grow within this field.
   Each clip is a learning milestone, showcasing my evolving understanding of color, light, and texture, and how these elements coalesce to form the visual storytelling that captivates us.
 
 Though my professional journey is just beginning, my commitment to this art form runs deep. I invite you to view my reel, a reflection of my foundational skills and my potential for growth.
