--- a/VFX.html
+++ b/VFX.html
@@ -3,14 +3,12 @@ layout: page
 title: VFX
 background: '/img/bg-index.png'
 ---
-<p>Welcome to my demo reel. As a Junior Compositing Technical Director with six months of immersive experience in the dynamic world of visual effects, I've embarked on a journey filled with learning, creativity, and a deepening passion for bringing imagination to life.</p>
-  <p>In this short span, I've had the opportunity to delve into the intricacies of compositing, working with tools like Nuke, Maya, and Houdini to create seamless visual narratives.</p>
+<p>Welcome to my demo reel. As a Junior Compositing Technical Director, I've dedicated six months to immersing myself in the vibrant realm of visual effects.
+  This journey has been a blend of rapid learning and creative exploration, leveraging industry-standard tools like Nuke, Maya, and Houdini to craft compelling visual narratives.
+  This collection of work is more than a showcase; it's a story of my evolving grasp on the nuanced play of color, light, and texture, and how they merge to tell captivating visual stories.</p>
 
-<p>This reel represents not just the culmination of my work so far but a testament to my dedication and eagerness to grow within this field.
-  Each clip is a learning milestone, showcasing my evolving understanding of color, light, and texture, and how these elements coalesce to form the visual storytelling that captivates us.</p>
-
-<p>Though my professional journey is just beginning, my commitment to this art form runs deep. I invite you to view my reel, a reflection of my foundational skills and my potential for growth.
-  I look forward to the opportunities and challenges ahead, eager to contribute my creativity and technical skills to the world of visual effects.</p> 
+<p>In the early stages of my career, my commitment to the art and science of compositing is deep and driven. Each piece in this reel marks a significant step in my journey,
+  reflecting a steadfast dedication to growth and a keen anticipation for the future. As you view this reel, consider it both a display of my present abilities and a glimpse into the potential I aim to realize within the dynamic field of visual effects.</p> 
 
 <div style="padding:56.25% 0 0 0;position:relative;">
   <iframe src="https://player.vimeo.com/video/898149911?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0"
