--- a/VFX.html
+++ b/VFX.html
@@ -3,12 +3,12 @@ layout: page
 title: VFX
 background: '/img/bg-index.png'
 ---
-<p>Welcome to my demo reel. As a Junior Compositing Technical Director, I've dedicated six months to immersing myself in the vibrant realm of visual effects.
-  This journey has been a blend of rapid learning and creative exploration, leveraging industry-standard tools like Nuke, Maya, and Houdini to craft compelling visual narratives.
-  This collection of work is more than a showcase; it's a story of my evolving grasp on the nuanced play of color, light, and texture, and how they merge to tell captivating visual stories.</p>
-
-<p>In the early stages of my career, my commitment to the art and science of compositing is deep and driven. Each piece in this reel marks a significant step in my journey,
-  reflecting a steadfast dedication to growth and a keen anticipation for the future. As you view this reel, consider it both a display of my present abilities and a glimpse into the potential I aim to realize within the dynamic field of visual effects.</p> 
+<p>Welcome to my demo reel. After completing a diploma in advanced visual effects,
+  where I learned the basics using tools like Maya, Nuke, Houdini, Katana, Substance Painter, and ZBrush,
+  I specialized in compositing during my final four semesters.This journey led to a role as a Compositing Technical Director,
+  where I've contributed for six months from October 2023 to April 2024.</p>
+  <p>This reel showcases a blend of projects, highlighting my evolving skills in compositing to create visually compelling narratives,
+    demonstrating both my foundational knowledge and the specialized expertise I've developed in this field..</p> 
 
 <div style="padding:56.25% 0 0 0;position:relative;">
   <iframe src="https://player.vimeo.com/video/898149911?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0"
