--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 layout: home
 background: '/img/bg-index.png'
 ---
+
+<h>Welcome to My Digital Canvas!</h>
+
 <p>Welcome to the intersection of creativity and technology, where my journey as a Junior Compositing TD merges stunning visual effects with intricate coding.
   With experience in VFX tools like Nuke, Maya, and Houdini, and a diverse coding background in C, Java, SQL, Python, and R, my portfolio is a testament to a relentless curiosity and a passion for blending art with technology.</p>
 <p>Armed with a foundation in data science and analysis, I navigate the realms of both pixels and programming, presenting a unique fusion of skills that defy traditional labels.
