--- a/tech.html
+++ b/tech.html
@@ -3,3 +3,12 @@ layout: page
 title: Tech
 background: '/img/bg-index.png'
 ---
+
+<h>Welcome to my technology showcase!</h>
+
+<p>A realm where my fascination with coding converges with a solid foundation in data science and analysis.
+  With skills spanning C, Java, SQL, Python, and R, alongside proficiency in tools like Tableau and the Microsoft Suite,
+  my journey through technology is driven by a passion for solving complex problems and turning data into insights.</p>
+<p>As I continuously explore the depths of programming and operating systems, including Windows and Linux, this page is a window into my evolving journey in the tech world,
+   highlighting projects, certifications, and a relentless pursuit of learning.
+  Join me in exploring the myriad ways in which technology can shape our understanding of data, enhance creativity, and forge new paths in the digital landscape.</p>
