--- a/tech.html
+++ b/tech.html
@@ -51,3 +51,27 @@ background: '/img/bg-index.png'
         </ul>
     </div>
 </div>
+
+<div class="certifications">
+  <h2>Certifications</h2>
+  <ul class="certification-list">
+    <li class="certification-item">
+      <h3>Google Data Analytics Professional Certificate</h3>
+      <ul>
+        <li>Completed eight Google-developed courses in data analytics.</li>
+        <li>Proficient in spreadsheets, SQL, Tableau, and R for data preparation, analysis, and visualization.</li>
+        <li>Gained practical experience through hands-on assessments, ready for entry-level data analytics roles.</li>
+      </ul>
+      <p><a href= "https://coursera.org/share/850f38eff1defb8c5846e8c6f466a053" target="_blank">Verify Certification</a></p>
+    </li>
+    <li class="certification-item">
+      <h3>Data Analysis with Python - Freecodecamp</h3>
+      <ul>
+        <li>Data Analysis Foundation: Proficient with CSV, SQL, NumPy, and Pandas for extracting, processing, and analyzing data to derive insights.</li>
+        <li>Visualization & Insight Presentation: Utilizes Matplotlib and Seaborn for clear data visualizations, effectively communicating findings.</li>
+        <li>Efficient Workflow Integration: Streamlines data workflows using Python, optimizing efficiency and enhancing insight discovery.</li>
+      </ul>
+      <p><a href= "https://coursera.org/share/850f38eff1defb8c5846e8c6f466a053" target="_blank">Verify Certification</a></p>
+    </li>
+  </ul>
+</div>
