--- a/tech.html
+++ b/tech.html
@@ -71,7 +71,7 @@ background: '/img/bg-index.png'
         <li>Visualization & Insight Presentation: Utilizes Matplotlib and Seaborn for clear data visualizations, effectively communicating findings.</li>
         <li>Efficient Workflow Integration: Streamlines data workflows using Python, optimizing efficiency and enhancing insight discovery.</li>
       </ul>
-      <p><a href= "https://coursera.org/share/850f38eff1defb8c5846e8c6f466a053" target="_blank">Verify Certification</a></p>
+      <p><a href= "https://freecodecamp.org/certification/Rahul_Ramakrish/data-analysis-with-python-v7" target="_blank">Verify Certification</a></p>
     </li>
   </ul>
 </div>
