--- a/tech.html
+++ b/tech.html
@@ -5,12 +5,18 @@ background: '/img/bg-index.png'
 ---
 <div class="intro">
   <h>Welcome to my technology showcase!</h>
-  <p>A realm where my fascination with coding converges with a solid foundation in data science and analysis.
-  With skills spanning C, Java, SQL, Python, and R, alongside proficiency in tools like Tableau and the Microsoft Suite,
-  my journey through technology is driven by a passion for solving complex problems and turning data into insights.</p>
-  <p>As I continuously explore the depths of programming and operating systems, including Windows and Linux, this page is a window into my evolving journey in the tech world,
-   highlighting projects, certifications, and a relentless pursuit of learning.
-  Join me in exploring the myriad ways in which technology can shape our understanding of data, enhance creativity, and forge new paths in the digital landscape.</p>
+  <p>My interest in technology started back in school when I first learned Java.
+    Understanding the basics of programming made learning new languages straightforward, as the core principles are similar, only the syntax changes.
+    This foundation led me to a 6-month data science course focused on machine learning foundations, followed by certifications in data analysis using Python and a Google Data Analytics certificate.
+    These experiences deepened my understanding of how to work with, analyze, and visually represent data.</p>
+  <p>In the realm of data science, I've gained valuable knowledge in predictive modeling, including techniques like Linear Regression, Logistic Regression, Support Vector Machines, and Decision Trees.
+    My Python skills are centered around predictive modeling, utilizing essential modules such as Numpy for numerical operations, Pandas for data manipulation, and Matplotlib for data visualization.
+    Additionally, my certification journey introduced me to Tableau and GGplot in R, enhancing my ability to organize data, create advanced visualizations, implement mapping, and effectively present data findings.</p>
+  <p>While pursuing a course in VFX, I also learned to code tools and gizmos for Nuke.
+    Working as a junior compositing TD further expanded my tech skills, including front-end development and creating GUIs using Python's tkinter.
+    My continuous learning also led me to code this website using Jekyll and GitHub Pages, hence letting me dip into web design as well.
+    I'm continually broadening my coding knowledge in different operating systems like Linux, driven by my passion for learning and the diverse opportunities in the tech field.</p>
+  <p>Below are my skills and certifications, reflecting my continuous learning journey in technology and data science.</p>
 </div>
 
 <div class="skills-overview">
